'repaired-prod-errors'

--- a/src/app/components/adminPanel/team/team-form/team-form.component.html
+++ b/src/app/components/adminPanel/team/team-form/team-form.component.html
@@ -59,7 +59,7 @@
 </mat-table>
 
 <div style='margin:auto;text-align: right;padding-top:10px'>
-  <button style='width:155px' color=primary mat-raised-button (click)="openDialog('addNewUser')">Add user</button>
+  <button style='width:155px' color=primary mat-raised-button >Add user</button>
 </div>
 
 <!--  -->
