--- a/src/app/components/teams/teams.component.html
+++ b/src/app/components/teams/teams.component.html
@@ -24,7 +24,7 @@
       <mat-paginator [length]="paginationProperties.length"
       [pageSize]="paginationProperties.pageSize"
       [pageSizeOptions]="paginationProperties.pageSizeOptions"
-      (page)='reloadTeamListByPaginator($event)'>
+      (page)='reloadTeamsList($event)'>
       </mat-paginator>
 
 
