--- a/src/app/components/user-profile/user-profile.component.html
+++ b/src/app/components/user-profile/user-profile.component.html
@@ -14,7 +14,7 @@
     </div>
   </mat-card>
   <mat-card>
-      <div class='user-card-content' [ngSwitch]="project?.status">
+      <div class='user-card-content' >
           <h4>Email</h4>
           <span>
               {{user?.email}}
