--- a/src/app/components/user-settings/user-settings.component.html
+++ b/src/app/components/user-settings/user-settings.component.html
@@ -13,7 +13,7 @@
   <div class='user-profile-element-container mat-typography'>
       <label class='mat-typography'>Last name</label>
       {{userData.lName}}
-      <mat-icon (click)='openUpdateFieldDialog("last name","lName")' class='edit-icon'    svgIcon="update-icon" (click)='openDialog()' ></mat-icon>
+      <mat-icon (click)='openUpdateFieldDialog("last name","lName")' class='edit-icon'    svgIcon="update-icon"  ></mat-icon>
   </div>
   <div class='user-profile-element-container mat-typography'>
       <label class='mat-typography'>Email</label>
