--- a/src/app/components/login-panel/login-panel.component.scss
+++ b/src/app/components/login-panel/login-panel.component.scss
@@ -19,6 +19,8 @@ $varibale:100px;
   position: absolute;
   left: 0px;
   top: 0px;
+  overflow:hidden;
+
   #login-panel-container{
     display: block;
     margin:auto;
