--- a/src/app/layouts/user-layout/user-layout.component.html
+++ b/src/app/layouts/user-layout/user-layout.component.html
@@ -1,3 +1,8 @@
+<ngx-loading-bar 
+[diameter]=100
+[includeBar]=false
+></ngx-loading-bar>
+
 <div class='content-container'>
 <div  class='navbar-container mat-typography' >
   
@@ -30,7 +35,7 @@
               <mat-icon svgIcon="projects-icon"></mat-icon>
             </div>
             </button>
-          <button class='menu-button' [routerLink]="['/app/team-panel']"  mat-menu-item>
+          <button class='menu-button' [routerLink]="['/app/user-team-list']"  mat-menu-item>
             <label class='menu-description-label'>Teams</label>
             <div>
               <mat-icon svgIcon="team-icon"></mat-icon>
