--- a/src/app/components/home-page/scroll-arrow.scss
+++ b/src/app/components/home-page/scroll-arrow.scss
@@ -20,11 +20,11 @@ a:hover {
 }
 
 
-#arrow a {
+.arrow a {
   padding-top: 80px;
   cursor:pointer;
 }
-#arrow a span {
+.arrow a span {
   position: absolute;
   top: 0;
   left: 50%;
@@ -40,16 +40,16 @@ a:hover {
   opacity: 0;
   box-sizing: border-box;
 }
-#arrow a span:nth-of-type(1) {
+.arrow a span:nth-of-type(1) {
   -webkit-animation-delay: 0s;
   animation-delay: 0s;
 }
-#arrow a span:nth-of-type(2) {
+.arrow a span:nth-of-type(2) {
   top: 16px;
   -webkit-animation-delay: .15s;
   animation-delay: .15s;
 }
-#arrow a span:nth-of-type(3) {
+.arrow a span:nth-of-type(3) {
   top: 32px;
   -webkit-animation-delay: .3s;
   animation-delay: .3s;
