--- a/src/app/layouts/user-layout/user-layout.component.scss
+++ b/src/app/layouts/user-layout/user-layout.component.scss
@@ -17,7 +17,6 @@
   height:45px;
   float:left;
   padding-left:24px;
-
 }
 
 
@@ -28,6 +27,7 @@
     width:100%;
     text-align:center;
     background:#00227b;
+    z-index:10;
     .menu-icon-container{
       float:right;
       margin:auto;
@@ -130,6 +130,38 @@
 .content-container{
   min-height:calc(100vh - 150px);
   
+}
+
+
+::ng-deep #loading-bar-spinner{
+  left:0px;
+  top:142px;
+  width: 100%;
+  //height: calc(100vh - 142px);
+  //height:calc(100vh - 150px);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 200;
+  position: absolute;
+  pointer-events: none;
+
+  //background:-webkit-radial-gradient(center, ellipse cover, rgba(255,255,255,0.1) 0%, rgba(143,143,143,1) 100%); /* safari5.1+,chrome10+ */
+  background: -webkit-radial-gradient(center, ellipse cover, rgba(255, 255, 255, 0.58) 0%, #ffffff 100%);}
+
+
+::ng-deep #loading-bar-spinner > * {
+  color: #00227b;
+  width: 100px;
+  height: 100px;
+  //margin-bottom:150px;
+  animation: 0.8s linear infinite loading-bar-spinner;
+  top: 50%;
+  left: 50%;
+  margin-top: -50px; /* Negative half of height. */
+  margin-left: -50px; /* Negative half of width. */
+  position: fixed;
+
 }
 
 
