--- a/src/app/components/login-panel/login-panel.component.scss
+++ b/src/app/components/login-panel/login-panel.component.scss
@@ -10,6 +10,12 @@ $varibale:100px;
   margin-top:30px !important;
 }
 
+.alert{
+  color:red;
+  text-align: left;
+  font-size:0.8em;
+}
+
 
 #container{
   margin:0;
