--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -2,8 +2,8 @@
   <h1 style='font-size: 300%;background:#3949ab;color:white;padding:30px'>Projects</h1>
 </div>
 
-<div class='content-wrapper'>
-    <div class='item-wrapper'>
+<div class='content-container'>
+    
       <div class='item-container' *ngFor='let project of projects;let i = index' [class.gray-background]="i%2==0">
       
         <div class='left-column-container'>
@@ -17,22 +17,21 @@
           <span class='project-budget'>Budget: {{project.budget?.value}}{{project.budget?.currency}}</span>
         </div>
     </div>
-    </div>
+   
     
-</div>
 
-
-
-  
   <div class='paginator-container'>
-
       <mat-paginator [length]="paginationProperties?.length"
       [pageSize]="paginationProperties?.pageSize"
       [pageSizeOptions]="paginationProperties?.pageSizeOptions"
       (page)='reloadProjectsList($event)'>
       </mat-paginator>
+  </div>
+
+</div>
+
 
 
   
-  </div>
+
 
