--- a/src/app/components/teams/teams.component.scss
+++ b/src/app/components/teams/teams.component.scss
@@ -4,6 +4,9 @@
 ::ng-deep .mat-paginator-page-size{
     float:left !important;
  }
+::ng-deep .mat-paginator-container{
+ justify-content: center !important;
+}
  .gray-row{
     background: #f2f2f2;
  }
@@ -36,6 +39,11 @@
  }
 .content-container{
     text-align: center;
+    min-height:calc(100vh - 290px);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     .teams-container{
         display: inline-block;
         width:75%;
@@ -53,27 +61,22 @@
                 }
             }
             .team-content-container{
-                //display:inline-block;
                 display:flex;
                 text-align: left;
-                //margin-top:50%;
                 width:60%;
                 .team-name{
                     font-size:200%;
                     
                 }
             }   
-            
-
-
         }
+    }
+    .paginator-container{
+        display:flex;
+        flex-grow: 1;
+        flex-direction: column-reverse;
+        margin-bottom: 20px;
 
-        .paginator-container{
-            width:50%;
-            margin-top:20px;
-            padding:10px;
-            margin:auto;
-        }
     }
 
 }
