--- a/src/app/layouts/user-layout/user-layout.component.html
+++ b/src/app/layouts/user-layout/user-layout.component.html
@@ -59,25 +59,28 @@
       </li>
   </ul>
   
+</div>
+
+<div class='mat-typography page-title-container'>
+    <h1 >{{pageTitle}}</h1>
 </div> 
+
 <router-outlet></router-outlet>
 
-
 </div>
-<div class="footer mat-typography'">
-  <div class='footer-content-container'>
-    <div class='footer-content'>
-    <span>Contact:</span>
-    <span>
-      <mat-icon svgIcon="email-icon"></mat-icon>
-      <label>sapek.arkadiusz@gmail.com</label>
-    </span>
-    <span>
-      <mat-icon svgIcon="location-icon"></mat-icon>
-      <label>Katowice, Polska</label>
-    </span>
+
+  <div class="footer mat-typography'">
+    <div class='footer-content-container'>
+      <div class='footer-content'>
+        <span>Contact:</span>
+        <span>
+          <mat-icon svgIcon="email-icon"></mat-icon>
+          <label>sapek.arkadiusz@gmail.com</label>
+        </span>
+        <span>
+          <mat-icon svgIcon="location-icon"></mat-icon>
+          <label>Katowice, Polska</label>
+        </span>
+      </div>
+    </div>
   </div>
-</div>
-
-  
-</div>
