--- a/src/app/components/team-manage/team-manage.component.html
+++ b/src/app/components/team-manage/team-manage.component.html
@@ -1,86 +1,120 @@
-<div class='mat-typography' style='width:100%'>
-    <h1 style='font-size: 300%;background:#3949ab;color:white;padding:30px'>Manage team</h1>
+
+<div class="team-manage-panel-container" >
+    <mat-divider></mat-divider>
+
+
+<div class='team-manage-panel-element-container mat-typography'>
+  <label  class='mat-typography'>Team name</label>
+  <div class='field-container' >
+  {{teamData?.name}}
+  </div>
+    <mat-icon (click)='openUpdateFieldDialog("name","name")'  class='edit-icon'   svgIcon="update-icon" ></mat-icon> 
 </div>
-  
-  <div class="team-manage-panel-container" >
-      <mat-divider></mat-divider>
 
-
-  <div class='team-manage-panel-element-container mat-typography'>
-    <label  class='mat-typography'>Team name</label>
-    <div class='field-container' >
-    {{teamData?.name}}
-   </div>
-     <mat-icon (click)='openUpdateFieldDialog("name","name")'  class='edit-icon'   svgIcon="update-icon" ></mat-icon> 
+<div class='team-manage-panel-element-container mat-typography'>
+  <label  class='mat-typography'>Description</label>
+  <div class='field-container' >
+    {{teamData?.description}}
   </div>
+    <mat-icon (click)='openUpdateFieldDialog("description","description")'  class='edit-icon'   svgIcon="update-icon" ></mat-icon> 
+</div>
+<div class='team-manage-element-container mat-typography'>
+    <label  class='mat-typography'>Visable:</label>
+    <mat-slide-toggle color=primary  class="mat-typography" [checked]="visabilityState" (click)="changeVisability()" >{{visabilityLabel}}</mat-slide-toggle>
+</div>
+<mat-divider></mat-divider>
 
-  <div class='team-manage-panel-element-container mat-typography'>
-    <label  class='mat-typography'>Description</label>
-    <div class='field-container' >
-      {{teamData?.description}}
+<div class='remove-project-container'>
+    <button class='remove-project-button' color=primary (click)='removeThisTeam()'  mat-raised-button>Remove this team</button>
+</div>
+
+<h1 class='mat-typography invitations-header'>Team members:</h1>
+
+<mat-table #table [dataSource]="membersDataTable">
+
+  <ng-container matColumnDef="id">
+    <mat-header-cell *matHeaderCellDef> Id </mat-header-cell>
+    <mat-cell *matCellDef="let user"> {{user._id}} </mat-cell>
+  </ng-container>
+  <ng-container matColumnDef="fName">
+    <mat-header-cell *matHeaderCellDef> Frist Name </mat-header-cell>
+    <mat-cell *matCellDef="let user"> {{user.fName}} </mat-cell>
+  </ng-container>
+  <ng-container matColumnDef="lName">
+    <mat-header-cell *matHeaderCellDef> Last Name </mat-header-cell>
+    <mat-cell *matCellDef="let user"> {{user.lName}} </mat-cell>
+  </ng-container>
+  <ng-container matColumnDef="email">
+    <mat-header-cell *matHeaderCellDef> Email </mat-header-cell>
+    <mat-cell *matCellDef="let user"> {{user.email}} </mat-cell>
+  </ng-container>
+  <ng-container matColumnDef="country">
+    <mat-header-cell *matHeaderCellDef> Country </mat-header-cell>
+    <mat-cell *matCellDef="let user"> {{user.country}} </mat-cell>
+  </ng-container>
+  <ng-container matColumnDef="city">
+    <mat-header-cell *matHeaderCellDef> City </mat-header-cell>
+    <mat-cell *matCellDef="let user"> {{user.city}} </mat-cell>
+  </ng-container>
+  <ng-container matColumnDef="bDay">
+    <mat-header-cell *matHeaderCellDef> Day of birth </mat-header-cell>
+    <mat-cell *matCellDef="let user"> {{user.bDay}} </mat-cell>
+  </ng-container>
+  <ng-container matColumnDef="actions">
+      <mat-header-cell *matHeaderCellDef> </mat-header-cell>
+      <mat-cell *matCellDef="let user">
+          <mat-icon style='cursor:pointer' (click)="openDialog('updateUser',user._id)" svgIcon="edit-icon"></mat-icon>
+          <mat-icon style='cursor:pointer' (click)="deleteUser(user._id)" svgIcon="remove-icon"></mat-icon>
+      </mat-cell>
+    </ng-container>
+
+
+  <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+  <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+</mat-table>
+
+<h1 class='mat-typography invitations-header'>Invitations</h1>
+
+<div class='invites-container'>
+  <span *ngIf='invitations?.length === 0'>
+    Your invitations list is empty.
+  </span>  
+
+  <div class='invite-container' *ngFor='let invitation of invitations;let i = index'>
+    <div class='invite-icon-container mat-typography'>
+      
+      <h1 class='invite-name'>{{ invitation?.user.fName }}</h1>
     </div>
-     <mat-icon (click)='openUpdateFieldDialog("description","description")'  class='edit-icon'   svgIcon="update-icon" ></mat-icon> 
-  </div>
-  <div class='team-manage-element-container mat-typography'>
-      <label  class='mat-typography'>Visable:</label>
-      <mat-slide-toggle color=primary  class="mat-typography" [checked]="visabilityState" (click)="changeVisability()" >{{visabilityLabel}}</mat-slide-toggle>
-  </div>
-  <mat-divider></mat-divider>
+      
+    <div class=invite-content-container [ngSwitch]="invitation.state">
+      <div>
+       {{invitation?.description}}
+      </div>
 
-  <div class='remove-project-container'>
-      <button class='remove-project-button' color=primary (click)='removeThisTeam()'  mat-raised-button>Remove this team</button>
-  </div>
+       <div *ngSwitchCase="'waitingOnUser'"  class=invite-state-container>
+          Invitation is still in progres.
+       </div>
+       <div *ngSwitchCase="'waitingOnTeam'" class=invite-state-container>
+         <button color=primary (click)='changeInviteStatusOnClick(invitation,"accepted")' mat-raised-button>Accept</button>
+         <button (click)='changeInviteStatusOnClick(invitation,"rejected")' mat-raised-button>Reject</button>
+       </div>
+       <div *ngSwitchCase="'accepted'" class=invite-state-container>
+        Invitation accepted.
+      </div>
+      <div *ngSwitchCase="'rejected'" class=invite-state-container>
+        Invitation rejected.
+      </div>
 
-  <!-- <p class='mat-typography'>List of team members.</p> -->
- <mat-table #table [dataSource]="membersDataTable">
-  
-    <ng-container matColumnDef="id">
-      <mat-header-cell *matHeaderCellDef> Id </mat-header-cell>
-      <mat-cell *matCellDef="let user"> {{user._id}} </mat-cell>
-    </ng-container>
-    <ng-container matColumnDef="fName">
-      <mat-header-cell *matHeaderCellDef> Frist Name </mat-header-cell>
-      <mat-cell *matCellDef="let user"> {{user.fName}} </mat-cell>
-    </ng-container>
-    <ng-container matColumnDef="lName">
-      <mat-header-cell *matHeaderCellDef> Last Name </mat-header-cell>
-      <mat-cell *matCellDef="let user"> {{user.lName}} </mat-cell>
-    </ng-container>
-    <ng-container matColumnDef="email">
-      <mat-header-cell *matHeaderCellDef> Email </mat-header-cell>
-      <mat-cell *matCellDef="let user"> {{user.email}} </mat-cell>
-    </ng-container>
-    <ng-container matColumnDef="country">
-      <mat-header-cell *matHeaderCellDef> Country </mat-header-cell>
-      <mat-cell *matCellDef="let user"> {{user.country}} </mat-cell>
-    </ng-container>
-    <ng-container matColumnDef="city">
-      <mat-header-cell *matHeaderCellDef> City </mat-header-cell>
-      <mat-cell *matCellDef="let user"> {{user.city}} </mat-cell>
-    </ng-container>
-    <ng-container matColumnDef="bDay">
-      <mat-header-cell *matHeaderCellDef> Day of birth </mat-header-cell>
-      <mat-cell *matCellDef="let user"> {{user.bDay}} </mat-cell>
-    </ng-container>
-    <ng-container matColumnDef="actions">
-        <mat-header-cell *matHeaderCellDef> </mat-header-cell>
-        <mat-cell *matCellDef="let user">
-            <mat-icon style='cursor:pointer' (click)="openDialog('updateUser',user._id)" svgIcon="edit-icon"></mat-icon>
-            <mat-icon style='cursor:pointer' (click)="deleteUser(user._id)" svgIcon="remove-icon"></mat-icon>
-        </mat-cell>
-      </ng-container>
-  
-  
-    <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-    <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
-  </mat-table>
-  
-  <!-- <div style='margin:auto;text-align: right;padding-top:10px'>
-    <button style='width:155px' color=primary mat-raised-button (click)="openDialog('addNewUser')">Invite user to team</button>
-  </div> -->
-  
-  <!--  -->
-  
+    </div>
+    <div class='remove-icon-container'>
+      <mat-icon (click)='removeInvitationOnClik(i)' style='cursor:pointer'  svgIcon="remove-icon"></mat-icon>
+    </div> 
 
-  
+    <mat-divider></mat-divider>
+
   </div>
+</div>
+
+
+
+</div>
