--- a/src/app/components/team-manage/team-manage.component.scss
+++ b/src/app/components/team-manage/team-manage.component.scss
@@ -18,10 +18,11 @@
   margin-top:20px;
 }
 
+
 button{
   float:right;
   float:bottom;
-  margin-right:52px;
+  margin-right:6px;
 }
 .update-icon{
   float:none;
@@ -97,6 +98,66 @@ label{
     
     
   }
+  .invitations-header{
+    margin-top:130px;
+    font-weight: bold;
+    font-size:1.5em;
+  }
+
+  .invites-container{
+    display: inline-block;
+    width:90%;
+    margin-bottom:50px;
+    .invite-container{
+        width:100%; 
+        padding:15px;
+        text-align: left;
+        .invite-icon-container{
+            display:inline-block;
+            width:10%;
+            vertical-align: top;
+            text-align:left;
+            
+            .invite-icon{
+                width:100px;
+                height:100px;
+            }
+        }
+        .invite-content-container{
+            display:inline-block;
+            width:75%;
+            text-align:left;
+            margin-bottom:15px;
+            margin-left:15px;
+            .invite-name{
+                font-size:200%;
+                
+            }
+        }
+        .remove-icon-container{
+           // display:inline-block;
+            //width:10px;
+            //margin-left:30px;
+            float:right;
+            margin-right:30px
+        }
+        .invite-state-container{
+            //display:inline-block;
+            margin-top:10px;
+            float:right;
+            font-weight: bold;
+            text-align: left;
+            display:flex
+            // width:150px;
+            
+        }      
+        
+
+
+    }
+
+
+}
 
 
 
