--- a/src/app/components/user-profile/user-profile.component.html
+++ b/src/app/components/user-profile/user-profile.component.html
@@ -1,7 +1,3 @@
-<div class='mat-typography' style='width:100%'>
-    <h1 style='font-size: 300%;background:#3949ab;color:white;padding:30px'>User profile</h1>
-</div>
-
 <div class='content-wrapper'>
     <mat-card>
   <span class='user-name'><h2>{{user?.fName}} {{user?.lName}}</h2></span>
@@ -46,7 +42,7 @@
         </div>
     </mat-card>
 
-    <div class='action-container mat-typography'>
+    <div *ngIf='actualUserId!==user?._id' class='action-container mat-typography'>
             <div  class='action-item'>
                 <button (click)='openUserInvitationDialog()' color=primary mat-raised-button >Invite to team</button>
             </div>
