--- a/src/app/components/user-projects-list/user-projects-list.component.html
+++ b/src/app/components/user-projects-list/user-projects-list.component.html
@@ -1,11 +1,5 @@
-<div >
-    <div class='mat-typography' style='width:100%'>
-      <h1 style='font-size: 300%;background:#3949ab;color:white;padding:30px'>User projects</h1>
-</div>
-  
-  <!-- *ngIf="userProjects.length===0&&teamsProjects.length" -->
 <div class='content-wrapper'>
-    <div class='item-wrapper'>
+    <div *ngIf="teamsProjects?.length>0" class='item-wrapper'>
       <h1 class='header mat-typography'>Project that your teams are working on:</h1>
       <div class='item-container' *ngFor='let project of teamsProjects;let i = index' [class.gray-background]="i%2==0">
       
@@ -23,7 +17,7 @@
     
     </div>
 
-    <div class='item-wrapper'>
+    <div *ngIf="userProjects?.length>0" class='item-wrapper'>
         <h1  class='mat-typography'>Project posted by you:</h1>
         <div class='item-container' *ngFor='let project of userProjects;let i = index' [class.gray-background]="i%2==0">
         
@@ -38,6 +32,11 @@
           </div>
       </div>
       </div>
+
+      <div *ngIf="userProjects?.length===0&&teamsProjects?.length===0" class='item-wrapper'>
+        <h1  class='mat-typography no-projects-information'>You don't have any projects.</h1>
+      </div>
+
       <div class='add-project-container'>
         <button class='add-project-button' color=primary (click)='openAddNewProjectDialog()'  mat-raised-button>Add new project</button>
       </div>
