--- a/src/app/components/user-projects-list/user-projects-list.component.scss
+++ b/src/app/components/user-projects-list/user-projects-list.component.scss
@@ -16,6 +16,11 @@
     min-height: 150px;
     justify-content: flex-start
 }
+.no-projects-information{
+    text-align: center;
+    margin-top:30px;
+    font-size:1.5em;
+}
 h1{
     font-size:1.4em;
 }
