--- a/src/app/components/user-teams-list/user-teams-list.component.html
+++ b/src/app/components/user-teams-list/user-teams-list.component.html
@@ -1,6 +1,3 @@
-<div class='mat-typography' style='width:100%'>
-  <h1 style='font-size: 300%;background:#3949ab;color:white;padding:30px'>User teams</h1>
-</div>
 <div class='content-container'>
   <div class='teams-container'>
 
@@ -25,6 +22,9 @@
    
       <mat-divider></mat-divider>
     
+    </div>
+    <div *ngIf="userTeams?.length===0" class='item-wrapper'>
+      <h1  class='mat-typography no-teams-header'>You don't have any teams.</h1>
     </div>
     <button class='add-new-team-button' color=primary (click)='openAddNewTeamDialog()'  mat-raised-button>Add new team</button>
 
