--- a/src/app/components/user-teams-list/user-teams-list.component.scss
+++ b/src/app/components/user-teams-list/user-teams-list.component.scss
@@ -10,6 +10,9 @@
     .teams-container{
         display: inline-block;
         width:80%;
+        .no-teams-header{
+            font-size:1.5em;
+        }
         .team-container{
             width:90%; 
             padding:15px;
