--- a/src/app/layouts/user-layout/user-layout.component.scss
+++ b/src/app/layouts/user-layout/user-layout.component.scss
@@ -22,7 +22,7 @@
 
 
 .navbar-container{
-    margin-top:0px;
+    margin:0px;
     min-height:55px;
     width:100%;
     text-align:center;
@@ -94,6 +94,7 @@
       background:#3949ab;
       color:white;
       padding:30px;
+      margin:0px;
     }
   }
 
