--- a/src/app/layouts/user-layout/user-layout.component.html
+++ b/src/app/layouts/user-layout/user-layout.component.html
@@ -38,7 +38,7 @@
           <button class='menu-button' [routerLink]="['/app/user-team-list']"  mat-menu-item>
             <label class='menu-description-label'>Teams</label>
             <div>
-              <mat-icon svgIcon="team-icon"></mat-icon>
+              <mat-icon svgIcon="menu-team-icon"></mat-icon>
             </div>
             </button>
           <button class='menu-button' [routerLink]="['/app/invitations']"  mat-menu-item>
