--- a/src/app/components/project-profile/project-profile.component.scss
+++ b/src/app/components/project-profile/project-profile.component.scss
@@ -12,16 +12,16 @@ padding-bottom:5px !important;
     width:75%;
     padding-bottom:100px;
     padding-top:50px;
+    .project-title{
+        margin:auto;
+        text-align: center;
+    }
     .profile-container{
         
         
-        .project-title{
-            margin:auto;
-            text-align: center;
-        }
+        
         .project-card-content{
-            margin-left:auto;
-            margin-right:auto;
+            margin-left:30px;
             width:90%;
             margin-top:15px;
             margin-bottom:15px;
