--- a/src/app/components/projects/projects.component.scss
+++ b/src/app/components/projects/projects.component.scss
@@ -67,7 +67,7 @@ mat-icon{
 .item-container{
     display:flex;
     text-align:center;
-    min-height: 150px;
+    min-height: 200px;
     justify-content: flex-start;
 }
 
@@ -83,18 +83,23 @@ mat-icon{
     flex-direction: column;
     padding:15px;
     width:80%;
+    label{
+        font-weight: bold;
+    }
     .project-title{
         font-size:1.5em;
         align-self:flex-start;
         margin-bottom:auto;
         padding:10px;
+        margin-bottom: 0px;
+        padding-bottom: 0px;
     }
     .project-deadline{
-        font-size:0.8em;
-        font-weight:bold;
+        font-size:1em;
         align-self: flex-start;
         padding:10px;
         padding-top:0px;
+        padding-bottom: 0px;
     }
     .project-description{
         align-self: flex-start;
@@ -102,16 +107,22 @@ mat-icon{
         margin-bottom:auto;
         text-align: left;
         padding:10px;
+        padding-top:0px;
+        margin-top:0px;
+        margin-bottom:0px;
         span{
             text-align: left;
         }
     }
     .project-budget{
-        font-size:1.2em;
+        font-size:1em;
         align-self: baseline;
         margin-top:auto;
         padding:10px;
-        padding-bottom:5px
+        padding-bottom:5px; 
+        padding-bottom: 0px;
+        padding-top: 0px;
+        margin-top: 0px;
     }
 }
 
