--- a/src/app/components/teams/teams.component.scss
+++ b/src/app/components/teams/teams.component.scss
@@ -7,6 +7,29 @@
 ::ng-deep .mat-paginator-container{
  justify-content: center !important;
 }
+::ng-deep mat-card{
+    padding:0px !important;
+    padding-bottom: 0px !important; 
+}
+::ng-deep{
+    .filtr-field{
+        max-width: 119px;
+        *{
+            text-align: center;
+        }
+    }
+    .search-field{
+        width: 258px;
+        padding-left: 20px;
+    }
+    .status-field{
+        width: 100%;        
+    }
+    .filters-card{
+        padding-bottom: 0px !important; 
+    }
+    
+}
  .gray-row{
     background: #f2f2f2;
  }
@@ -21,56 +44,32 @@
     width:190px;
     display: flex;
  }
- button{
-     vertical-align: 50%	;
-     margin-left:20px;
-     margin-top:40%;
-     float: right;
-    
- }
- span{
-     margin-left:20px;
-     margin-right:20px;
-    vertical-align: middle;
+
+.team-container{
+   
     display: flex;
-    align-items: center;
-    justify-content: center;
-     
- }
-.content-container{
-    text-align: center;
-    min-height:calc(100vh - 290px);
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    .teams-container{
-        display: inline-block;
-        width:75%;
-        .team-container{
-            width:100%; 
-            padding:15px;
-            display: flex;
-            .team-icon-container{
-                display:inline-block;
-                width:20%;
-                cursor:pointer;
-                .team-icon{
-                    width:100px;
-                    height:100px;
-                }
-            }
-            .team-content-container{
-                display:flex;
-                text-align: left;
-                width:60%;
-                .team-name{
-                    font-size:200%;
-                    
-                }
-            }   
+    height:200px;
+    .team-icon-container{
+        width:20%;
+        justify-content: center;
+        align-items: center;
+        vertical-align: center;
+        display: flex;
+        .team-icon{
+            width:120px;
+            height:120px;
         }
+
     }
+    .team-content-container{
+        width:80%;
+        padding:15px;
+        display:flex;
+        flex-direction: column;
+        
+    }   
+}
+    
     .paginator-container{
         display:flex;
         flex-grow: 1;
@@ -79,4 +78,89 @@
 
     }
 
+
+/////////////////////
+.main-container{
+    display:flex;
+    flex-direction: row;
+    min-height:calc(100vh - 300px);
+    .sidebar-container{
+        max-width:300px;
+        flex-grow: 0.15;
+        margin:10px;
+        margin-top: 58px;
+        .filter-button{
+            width:100%;
+        }
+        .sidebar-header{
+            text-align: center;
+        }
+    }
 }
+
+.content-container{
+    width:60%;
+    display:flex;
+    flex-direction: column;
+    flex-grow: 0.7;
+    min-height:calc(100vh - 300px);
+    .no-projects-info{
+        text-align: center;
+        margin-top: auto;
+        margin-bottom: auto;
+    }
+    .sort-container{
+
+        text-align: right;
+    }
+    .no-projects-info{
+        text-align: center;
+        margin-top: auto;
+        margin-bottom: auto;
+    }
+    
+}
+.item-container{
+    display:flex;
+    text-align:center;
+    height: 200px;
+    justify-content: flex-start;
+}
+
+
+//link animation
+
+h2 > a {
+    font-weight: normal;
+    cursor:pointer;
+    position: relative;
+    color: #3949ab;
+    text-decoration: none;
+  }
+  
+  h2 > a:hover {
+    color: #3949ab;
+    font-weight: normal;
+
+  }
+  h2 > a:before {
+    font-weight: normal;
+
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    bottom: 0;
+    left: 0;
+    background-color: #3949ab;
+    visibility: hidden;
+    -webkit-transform: scaleX(0);
+    transform: scaleX(0);
+    -webkit-transition: all 0.15s ease-in-out 0s;
+    transition: all 0.15s ease-in-out 0s;
+  }
+  h2 > a:hover:before {
+    visibility: visible;
+    -webkit-transform: scaleX(1);
+    transform: scaleX(1);
+  }
